Article fix problemi con padding e scrollbar

--- a/src/css/article.css
+++ b/src/css/article.css
@@ -1,74 +1,69 @@
-.main-art{
+.main-art {
     align-items: center;
     justify-content: space-between;
+    height: 100vh; /* Make sure the main container takes the full viewport height */
+    overflow: auto; /* Ensure the main container can scroll if content overflows */
 }
 
-.article_textbox{
+.article_textbox {
     position: relative;
     display: flex;
+    flex-direction: column; /* Ensure the content stacks vertically */
     justify-content: center;
     align-items: center;
     width: 50%;
     height: 65%;
-    padding: 5px; 
+    padding: 5px;
+    overflow: hidden; /* Hide any overflow content */
 }
 
-.article_textbox .grid-el{
+.article_textbox .grid-el {
     width: 100%;
-    height: 100%;
     font-size: 2vw;
 }
 
-.article_textbox .article{
-    max-height: 400px;
+.article_textbox .article {
+    max-height: 400px; /* Limit the height of the article content */
+    overflow: auto; /* Enable scrolling if content exceeds max-height */
 }
 
-.article_textbox .cont-article{
+.article_textbox .cont-article {
     display: none;
 }
 
-
-.article_textbox_expand .article{
-    display: none;
-}
-
-.article_textbox_expand .cont-article{
-    display: block;
-}
-
-.article_textbox_expand{
+.article_textbox_expand {
     position: relative;
     width: 650px;
-    height: 65%;
-    padding: 10px; 
+    padding: 10px;
+    padding-top: 1000px;
+    padding-bottom: 50px;
     background-color: #C8D2D2;
-    overflow-y: scroll;
+    overflow-y: hidden; /* Hide vertical scrollbar */
 }
 
-.article_textbox_expand h1{
+.article_textbox_expand h1 {
     font-size: 3em;
     font-weight: bold;
     margin: 15px 30px;
 }
 
-.article_textbox_expand h2{
+.article_textbox_expand h2 {
     font-size: 1.3em;
     margin: 0px 30px;
 }
 
-.article_textbox_expand p{
+.article_textbox_expand p {
     font-size: 1.2em;
     margin: 0px 30px;
-    height: 100%;
 }
 
-.readMore{
+.readMore {
     width: 100%;
     height: 100%;
     background-color: transparent;
 }
 
-.slide_counter{
+.slide_counter {
     font-family: 'Antonio';
     background-image: url('../assets/cartafondo.png');
     background-size: cover;
@@ -86,7 +81,7 @@
     transform: translateY(20px);
 }
 
-#arrow_menu{
+#arrow_menu {
     background-color: whitesmoke;
     height: 60px;
     width: 60px;
@@ -94,19 +89,18 @@
     transition: background-color 0.25s ease;
 }
 
-#arrow{
-    color:black;
+#arrow {
+    color: black;
     font-size: 4.5em;
     font-weight: bold;
 }
 
-#arrow_menu:hover{
+#arrow_menu:hover {
     background-color: hsl(0, 0%, 80%);
     cursor: pointer;
 }
 
-#arrow_menu:active{
+#arrow_menu:active {
     background-color: hsl(0, 0%, 85%);
     border: none;
 }
-
